# sfmlvst

./: .gitignore  CMakeLists.txt  Readme.md
source/: RJcids.h  RJcontroller.cpp  RJcontroller.h  RJentry.cpp  RJprocessor.cpp  RJprocessor.h  version.h
source/log/: PolyLogger.cpp  PolyLogger.hpp
source/ui/view/: ChildWindowFactory.hpp  IChildWindow.hpp  VstPluginViewImpl.cpp  VstPluginViewImpl.hpp
source/ui/view/receivers/: EventReceiverFactory.hpp  IWindowEventReceiver.hpp  ImGuiMenuEventReceiver.hpp  ReceiverDistributor.hpp  WindowEventReceiver.hpp
source/ui/view/viz/: VisualizationEventDistributor.hpp
source/ui/view/viz/dots/: Dots.hpp  DotsData_t.hpp  DotsMenuWindowEventReceiver.hpp  DotsWindowEventReceiver.cpp  DotsWindowEventReceiver.hpp  TimedDot_t.hpp
source/ui/view/viz/helpers/: ColorHelper.hpp  MathHelper.hpp  MidiHelper.hpp
source/ui/view/viz/squiggles/: SquiggleData_t.hpp  Squiggles.hpp  SquigglesMenuWindowEventReceiver.hpp  SquigglesWindowEventReceiver.hpp
source/ui/view/viz/test/: TestData_t.hpp  TestMenuWindowEventReceiver.hpp  TestWindowEventReceiver.hpp
source/ui/view/viz/triangles/: Triangles.hpp  TrianglesData_t.hpp  TrianglesMenuWindowEventReceiver.hpp  TrianglesWindowEventReceiver.cpp  TrianglesWindowEventReceiver.hpp
source/ui/view/win32/: Win32Helper.hpp  Win32SfmlWindow.cpp  Win32SfmlWindow.hpp  Win32WndCtx_t.hpp
source/utils/: FpsMeasurement.hpp  Immovable.hpp  Noncopyable.hpp  TimeMeasurement.hpp
